fixed footer overlap problem on mobile devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,7 +78,8 @@ header {
 
 #landingpage {
     display: grid;
-    margin: 0 0 10% 0;
+    height: 750px;
+    margin: 0 0 5% 0;
     grid-template-columns: 3.5% 31% 31% 31% 3.5%;
     grid-template-rows: auto auto 5% auto auto;
     grid-template-areas: 
@@ -142,7 +143,7 @@ header {
 /* ↓↓↓ FOOTER ↓↓↓ */
 
 footer {
-    margin: 2.5% 0;
+    margin: 10% 0 5% 0;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-rows: auto;
@@ -170,8 +171,9 @@ footer a {
 
     #landingpage {
         display: grid;
+        height: 2000px;
         grid-template-columns: 3.5% 93% 3.5%;
-        grid-template-rows: auto auto auto 5% auto auto auto 5% auto auto auto;
+        grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto;
         grid-template-areas: 
         ". aboutus ."
         ". aboutusp ."
